made homepage with nav links on all sub pages. much css. made weather app more useful

--- a/mini-projects/pokegifs/style/style.css
+++ b/mini-projects/pokegifs/style/style.css
@@ -9,6 +9,7 @@ body {
 	width: 540pt;
 	max-width: 95%;
 	margin: 0 auto;
+	margin-top: 6em;
 	padding: 30pt 0 30pt 0;
 	border-radius: 60pt;
 	overflow: hidden;
