more mobile work

--- a/mini-projects/pokegifs/style/narrow.css
+++ b/mini-projects/pokegifs/style/narrow.css
@@ -31,4 +31,14 @@
 	}
 }
 	
+
+@media screen and (max-width: 400px) {
+	
+	#mainBox {
+		padding-top: 5pt;
+	}
+	#mainTitle {
+		margin-bottom: 2pt;
+	}
+
 }
