--- a/style/main-style.css
+++ b/style/main-style.css
@@ -13,8 +13,6 @@ html {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    padding-top: 10px;
-    padding-bottom: 10px;
     overflow: hidden;
 }
 
@@ -28,13 +26,16 @@ html {
 }
 
 #nav-links button {
-    margin: 0 0.1em 0 0.1em;
+    margin: 0;
+    padding: 0.8em;
+    padding-top: 0.8em;
+    padding-bottom:  0.8em;
     font-size: 1.4em;
-    padding: 0.4em;
     color: white;
     background-color: #292730;
     border: none;
     cursor: pointer;
+    transition: 0.4s;
 }
 
 #nav-links .dropdown {
@@ -43,7 +44,7 @@ html {
   }
 
 #nav-links button:hover {
-    background-color: rgb(75, 65, 83);
+    background-color:#3e3b48;
 }
 
 #nav-links .dropcont{
