--- a/style/main-style.css
+++ b/style/main-style.css
@@ -65,13 +65,6 @@ html {
     text-align: left;
 }
 
-#hi {
-    text-align: center;
-    font-size: 2em;
-    width: 25em;
-    max-width: 80%;
-    margin: 3em auto;
-}
 
 .physics-box {
     font-size: 1.1em;
@@ -93,10 +86,85 @@ html {
     margin-bottom: 0.7em;
 }
 
-#mypic {
-    display: block;
-    width: 13em;
-    margin: 5em auto -40px auto;
-    border-radius: 10em;
+.home-box {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    font-size: 1.1em;
+    width: 60%;
+    max-width: 90%;
+    margin: 3em auto;
 }
 
+.home-box hr{
+    width:70%;
+    text-align:center;
+    margin: 2em;
+    margin-left: 15%;
+    margin-right: 15%;
+    border: 2px solid  rgb(169, 201, 255);
+    border-radius: 5px;
+}
+
+#hi {
+    font-size: 0.9em;
+    margin-top: 0;
+    margin-right:0;
+    padding-right:0;
+    color: #292730;
+}
+
+#hi h2{
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 2.5em;
+    text-shadow: 2px 2px rgb(169, 201, 255);
+}
+
+#hi li{
+    margin-bottom:1em;
+    margin-left: -1.5em;
+    list-style-type: none; /* Remove bullets */
+
+}
+
+.socials {
+    margin: auto;
+}
+
+.socials img{
+    width:2.5em;
+    height:2.5em;
+    margin:0.4em;
+    filter: grayscale(100%);
+    transition: 0.4s;
+    border-radius: 0.3em;
+    
+}
+
+.socials img:hover{
+    filter: grayscale(0%);
+}
+
+
+#mypic {
+    width: 15em;
+    margin: 0em 1em 0.5em 0em;
+    border-radius: 1em;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:active {
+    text-decoration: none;
+}
