--- a/style/main-style.css
+++ b/style/main-style.css
@@ -2,6 +2,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-family: Verdana, Geneva, sans-serif;
+    background-color: #ffffff;
 }
 
 html {
