--- a/style/main-style.css
+++ b/style/main-style.css
@@ -139,7 +139,7 @@ html {
     width:2.5em;
     height:2.5em;
     margin:0.4em;
-    filter:grayscale(100%) brightness(140%);
+    filter:grayscale(70%) brightness(140%);
     transition: 0.2s;
     border-radius: 0.3em;
 }
@@ -149,6 +149,7 @@ html {
     width: 2.7em;
     height: 2.7em;
     margin: 0.3em;
+    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
 }
 
 
