added life expectancy project to portfolio

--- a/style/portfolio-style.css
+++ b/style/portfolio-style.css
@@ -193,6 +193,10 @@
     background-color: rgba(197, 184, 0, 0.226);
 }
 
+.hashtag span.publichealth{
+    background-color: rgba(0, 94, 184, 0.226);
+}
+
 
 
 /* <span class="WebDev">#WebDev </span>
