--- a/style/portfolio-style.css
+++ b/style/portfolio-style.css
@@ -58,6 +58,18 @@
     margin: 0;
     padding: 0;
     object-fit: cover;
+    margin-bottom: -0.25em;
+}
+
+.port-img-hue {
+    background:#b983c6e6;
+    padding:0;
+    margin:0;
+}
+
+.filterDiv img:hover {
+    filter:invert(20%);
+    mix-blend-mode: overlay; 
 }
 
 .filterDiv{
@@ -69,6 +81,10 @@
     margin-left: 0.3em;
     margin-bottom: 0.2em;
     font-size: 1em;
+}
+
+.filterDiv h3:hover {
+    color: #a276ac;
 }
 
 .filterDiv p {
