--- a/style/main-narrow.css
+++ b/style/main-narrow.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 65em) {
+	.physics-box {
+		max-width: 90%;
+	}
+}
+
 @media screen and (max-width: 500px) {
 	
 	#nav-links button {
@@ -14,5 +20,9 @@
 
 	.home-box h2{
 		text-align:center;
+	}
+
+	.physics-box {
+		max-width: 90%;
 	}
 }
