--- a/style/main-style.css
+++ b/style/main-style.css
@@ -76,8 +76,12 @@ html {
 }
 
 .physics-box a{
-    color:rgb(25, 76, 143);
+    color:rgb(175,113,190);
     text-decoration: none;
+}
+
+.physics-box a:hover{
+    text-decoration: underline;
 }
 
 .physics-box h2{
@@ -88,14 +92,23 @@ html {
     margin-bottom: 0.7em;
 }
 
+.physics-box img{
+    width: 30em; 
+    max-width: 90%;
+    display: block;
+    margin: 0 auto;
+}
+
 .home-box {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     font-size: 1.1em;
     max-width: 53em; 
     margin: 3em auto;
     /*border:solid #292730;*/
+    margin-bottom: 1em;
 }
 
 .home-box hr{
@@ -103,7 +116,7 @@ html {
     margin: 2em;
     margin-left: 15%;
     margin-right: 15%;
-    border: 2px solid rgb(196, 216, 251)
+    border: 2px solid rgb(196, 216, 251);
 }
 
 #hi {
@@ -125,13 +138,13 @@ html {
     margin-bottom:1em;
     margin-left: -1.5em;
     list-style-type: none; /* Remove bullets */
-
 }
-
 
 
 .socials {
     margin: auto;
+    margin-top: 0;
+    width:10.7em
 }
 
 .socials img{
