--- a/style/main-style.css
+++ b/style/main-style.css
@@ -151,24 +151,22 @@ html {
     width:2.5em;
     height:2.5em;
     margin:0.4em;
-    filter:grayscale(70%) brightness(140%);
     transition: 0.2s;
-    border-radius: 0.3em;
+    box-shadow: 2px 2px #b983c6;
 }
 
 .socials img:hover{
-    filter: grayscale(0%) brightness(100%);
     width: 2.7em;
     height: 2.7em;
     margin: 0.3em;
-    box-shadow: 0px 4px 8px 0px rgba(0,0,0,0.2);
+    box-shadow: 5px 5px #b983c6;
 }
 
 
 #mypic {
     width: 15em;
     margin: 0em 2em 0.5em 0em;
-    border-radius: 1em;
+    box-shadow: 5px 5px #b983c6;
 }
 
 a:link {
