--- a/style/portfolio-style.css
+++ b/style/portfolio-style.css
@@ -85,6 +85,11 @@
     padding: 0.2em;
 }
 
+.filterDiv:hover img{
+    margin: -0.2em;
+    width: 14.4em;
+}
+
 .filterDiv p {
     margin-top: 0.1em;
     margin-left: 0.4em;
